server/.happypack/s--26165438
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Map/Map.js: Unexpected token, expected , (67:75)

[0m [90m 65 | [39m
 [90m 66 | [39m    forceUpdate(){
[31m[1m>[22m[39m[90m 67 | [39m        [36mconst[39m width [33m=[39m [33mMath[39m[33m.[39mfloor(document[33m.[39mdocumentElement[33m.[39mclientHeight [33m/[39m [35m50[39m[33m;[39m
 [90m    | [39m                                                                           [31m[1m^[22m[39m
 [90m 68 | [39m        [36mif[39m( width [33m!==[39m [36mthis[39m[33m.[39mstate[33m.[39mcountRows){
 [90m 69 | [39m            [36mthis[39m[33m.[39msetState({
 [90m 70 | [39m                countRows[33m:[39m width[33m,[39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Map/Map.js: Unexpected token, expected , (67:75)

[0m [90m 65 | [39m
 [90m 66 | [39m    forceUpdate(){
[31m[1m>[22m[39m[90m 67 | [39m        [36mconst[39m width [33m=[39m [33mMath[39m[33m.[39mfloor(document[33m.[39mdocumentElement[33m.[39mclientHeight [33m/[39m [35m50[39m[33m;[39m
 [90m    | [39m                                                                           [31m[1m^[22m[39m
 [90m 68 | [39m        [36mif[39m( width [33m!==[39m [36mthis[39m[33m.[39mstate[33m.[39mcountRows){
 [90m 69 | [39m            [36mthis[39m[33m.[39msetState({
 [90m 70 | [39m                countRows[33m:[39m width[33m,[39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)